// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jill info should print workspace basic info 1`] = `
"Workspace [1mwks[22m:
[1mVersion:[22m   1.0.0
[1mDirectory:[22m wks

[1mDependencies:[22m
[90m   No dependencies for wks[39m
"
`;

exports[`jill info should print workspace basic info with dependencies 1`] = `
"Workspace [1mwks[22m:
[1mVersion:[22m   1.0.0
[1mDirectory:[22m wks

[1mDependencies:[22m
├─ depA
│  ├─ [3mdepA[23m
│  └─ [3mdepB[23m
└─ [3mdepB[23m
"
`;

exports[`jill info should print workspace basic info with dev-dependencies 1`] = `
"Workspace [1mwks[22m:
[1mVersion:[22m   1.0.0
[1mDirectory:[22m wks

[1mDependencies:[22m
├─ [90mdepA (dev)[39m
│  [90m├─ [39m[3m[90mdepA (dev)[39m[23m
│  [90m└─ [39m[3m[90mdepB (dev)[39m[23m
└─ [3m[90mdepB (dev)[39m[23m
"
`;
